Updating recipe component with recipe service behavior

--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -22,7 +22,7 @@
 <div>
   <h3>Recipes List</h3>
   <ul class="list-group w-100">
-    <app-recipe-item *ngFor="let recipe of recipesList" [recipeItm]="recipe" (recipeSelected)="onRecipeSelected(recipe)"></app-recipe-item>
+    <app-recipe-item *ngFor="let recipe of recipesList" [recipeItm]="recipe"></app-recipe-item>
   </ul>
 
  
