--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -2,7 +2,7 @@
 
   <div class="col-md-8 mb-3">
 
-    <app-recipes-list (recipeSelected)="selectedRecipe = $event"></app-recipes-list>
+    <app-recipes-list></app-recipes-list>
 
   </div>
 
