--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
 
   <div class="container">
-    <a class="navbar-brand" href="#">Recipes-App</a>
+    <a class="navbar-brand" style="cursor: pointer;">Recipes-App</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#app-header-navbar" aria-controls="app-header-navbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,21 +10,21 @@
     <div class="collapse navbar-collapse" id="app-header-navbar">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#" (click)="onChangePage('recipes')">Recipes</a>
+          <a class="nav-link" [routerLink]="['/recipes']" routerLinkActive="active" >Recipes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" (click)="onChangePage('shopping-list')">Shopping List</a>
+          <a class="nav-link" [routerLink]="['/shopping-list']" routerLinkActive="active" >Shopping List</a>
         </li>
       </ul>
-      
+
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" [appDropdown]="dropDownMenu">
+          <a class="nav-link dropdown-toggle" style="cursor: pointer;" [appDropdown]="dropDownMenu">
             Manage
           </a>
           <div class="dropdown-menu" #dropDownMenu>
-              <a class="dropdown-item" href="#">Option1</a>
-              <a class="dropdown-item" href="#">Option2</a>
+              <a class="dropdown-item" style="cursor: pointer;">Option1</a>
+              <a class="dropdown-item" style="cursor: pointer;">Option2</a>
           </div>
         </li>
       </ul>
