--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -9,7 +9,7 @@
 
   <div class="col-md-4">
 
-    <app-recipe-details [recipeDetails]="selectedRecipe"></app-recipe-details>
+    <router-outlet></router-outlet>
 
   </div>
 
