--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,28 +1,10 @@
-<div class="text-center mb-3">
-  <h3>Add new Recipe</h3>
-  <div class="row justify-content-around">
-    <div class="col-md-6">
-      <div class="form-group">
-        <input placeholder="Recipe name" type="text" class="form-control" #recipeNameInput>
-      </div>
-      <div class="form-group">
-        <input placeholder="Img link" type="text" class="form-control" #recipeImgInput>
-      </div>
-      
-    </div>
-    <div class="col-md-6">
-      <div class="form-group">
-        <textarea placeholder="Recipe Description" class="form-control" #recipeDescInput></textarea>
-      </div>
-      <button class="btn btn-success btn-block" (click)="onAddNewRecipe()">Add</button>
-    </div>
-  </div>
-</div>
+<button class="btn btn-success btn-block" [routerLink]="['new']" >Add new recipe</button>
 
-<div>
+
+<div class="my-3">
   <h3>Recipes List</h3>
   <ul class="list-group w-100">
-    <app-recipe-item *ngFor="let recipe of recipesList" [recipeItm]="recipe"></app-recipe-item>
+    <app-recipe-item *ngFor="let recipe of recipesList; let i = index" [recipe]="recipe" [index]="i"></app-recipe-item>
   </ul>
 
 
