--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
 
   <div class="container">
-    <a class="navbar-brand" style="cursor: pointer;">Recipes-App</a>
+    <a class="navbar-brand" style="cursor: pointer;" [routerLink]="['/']" >Recipes-App</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#app-header-navbar" aria-controls="app-header-navbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
