Adding recipe edit, shopping list edit forms with angular foms modules

--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -12,6 +12,7 @@
     <div class="dropdown-menu" #dropDownMenu>
         <a class="dropdown-item" style="cursor: pointer;" (click)="onAddToShoppingList()">Add to shopping list</a>
         <a class="dropdown-item" style="cursor: pointer;" [routerLink]="['edit']" >Edit</a>
+        <a class="dropdown-item" style="cursor: pointer;" (click)="onDeleteRecipe()" >Delete</a>
     </div>
   </div>
 </div>
