--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,11 +1,22 @@
-<div class="form-inline mb-3">
-  <div class="form-group m-1">
-    <label class="mr-2" for="">name of ingredient</label>
-    <input type="text" class="form-control" #ingredientNameInput>
+<form  (ngSubmit)="onSubmit()" #editForm="ngForm">
+  <div class="form-inline mb-3">
+    <div class="form-group m-1">
+      <label class="mr-2" for="">name of ingredient</label>
+      <input  type="text"
+              class="form-control"
+              name="name" ngModel
+              required>
+    </div>
+    <div class="form-group m-1">
+      <label class="mr-2" for="">amount</label>
+      <input  type="number" 
+              class="form-control" 
+              name="amount" ngModel
+              required
+              pattern="^[1-9]+[0-9]*$">
+    </div>
+    <button class="btn btn-primary m-1" type="submit" [disabled]="!editForm.valid">{{ !editModeFlag ? 'Add' : 'Update' }}</button>
+    <button class="btn btn-danger m-1" type="button" (click)="onDelete()" *ngIf="editModeFlag">Delete</button>
+    <button class="btn btn-info m-1" type="button" (click)="onClear()">Clear</button>
   </div>
-  <div class="form-group m-1">
-    <label class="mr-2" for="">amount</label>
-    <input type="number" class="form-control" #ingredientAmountInput>
-  </div>
-  <button class="btn btn-primary m-1" (click)="onAddIngredient()">Add</button>
-</div>
+</form>
