--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,24 +9,40 @@
 
     <div class="collapse navbar-collapse" id="app-header-navbar">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/recipes']" routerLinkActive="active" >Recipes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/shopping-list']" routerLinkActive="active" >Shopping List</a>
-        </li>
+        <ng-template [ngIf]="authService.isAuthenticated()">
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/recipes']" routerLinkActive="active" >Recipes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/shopping-list']" routerLinkActive="active" >Shopping List</a>
+          </li>
+        </ng-template>
+        
+        <ng-template [ngIf]="!authService.isAuthenticated()">
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/signup']" routerLinkActive="active" >Signup</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/signin']" routerLinkActive="active" >Login</a>
+          </li>
+        </ng-template>
       </ul>
 
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" style="cursor: pointer;" [appDropdown]="dropDownMenu">
-            Manage
-          </a>
-          <div class="dropdown-menu" #dropDownMenu>
-              <a class="dropdown-item" style="cursor: pointer;" (click)="onSaveData()">Save Data</a>
-              <a class="dropdown-item" style="cursor: pointer;" (click)="onGetData()">Get Data</a>
-          </div>
-        </li>
+        
+        <ng-template [ngIf]="authService.isAuthenticated()">
+          <a class="nav-link" style="cursor: pointer;" (click)="onLogout()">Logout</a>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" style="cursor: pointer;" [appDropdown]="dropDownMenu">
+                Manage
+              </a>
+              <div class="dropdown-menu" #dropDownMenu>
+                  <a class="dropdown-item" style="cursor: pointer;" (click)="onSaveData()">Save Data</a>
+                  <a class="dropdown-item" style="cursor: pointer;" (click)="onGetData()">Get Data</a>
+              </div>
+            </li>
+        </ng-template>
+      
       </ul>
 
     </div>
