--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,25 +1,16 @@
+<div class="row">
+
+  <div class="col-md-8 mb-3">
+
+    <app-recipes-list></app-recipes-list>
+
+  </div>
 
 
-    <div class="row" *ngIf="authService.isAuthenticated(); else login">
+  <div class="col-md-4">
 
-        <div class="col-md-8 mb-3">
-      
-          <app-recipes-list></app-recipes-list>
-      
-        </div>
-      
-      
-        <div class="col-md-4">
-      
-          <router-outlet></router-outlet>
-      
-        </div>
-      
-      </div>
+    <router-outlet></router-outlet>
 
+  </div>
 
-<ng-template #login>
-  <p class="display-4">You need to login</p>
-</ng-template>
-
-
+</div>
